--- a/src/DesafioAVMB.API/DesafioAVMB.API.csproj
+++ b/src/DesafioAVMB.API/DesafioAVMB.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DesafioAVMB.Infrastructure\DesafioAVMB.Infrastructure.csproj" />
+    <ProjectReference Include="..\DesafioAVMB.Application\DesafioAVMB.Application.csproj" />
+  </ItemGroup>
+
 </Project>
