--- a/src/DesafioAVMB.Application/DesafioAVMB.Application.csproj
+++ b/src/DesafioAVMB.Application/DesafioAVMB.Application.csproj
@@ -1,10 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DesafioAVMB.Domain\DesafioAVMB.Domain.csproj" />
+    <ProjectReference Include="..\DesafioAVMB.Infrastructure\DesafioAVMB.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
 
 </Project>
