--- a/src/DesafioAVMB.Infrastructure/DesafioAVMB.Infrastructure.csproj
+++ b/src/DesafioAVMB.Infrastructure/DesafioAVMB.Infrastructure.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
@@ -23,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DesafioAVMB.Domain\DesafioAVMB.Domain.csproj" />
+    <ProjectReference Include="..\DesafioAVMB.Application\DesafioAVMB.Application.csproj" />
   </ItemGroup>
 
 </Project>
