--- a/src/DesafioAVMB.API/appsettings.json
+++ b/src/DesafioAVMB.API/appsettings.json
@@ -1,6 +1,10 @@
 {
+  "DigitalSignatureProvider": {
+    "BaseUrlApi": "https://plataforma.astenassinatura.com.br/api",
+    "Token": "<place your AstenAssinatura API token here>"
+  },
   "ConnectionStrings": {
-    "Default": "placeholder"
+    "Default": "Server=localhost; Database=DesafioAVMB; User Id=sa; Password=YourStrong(!)Password; Encrypt=false; TrustServerCertificate=false;"
   },
   "Logging": {
     "LogLevel": {
